--- a/src/main/resources/templates/addPost.html
+++ b/src/main/resources/templates/addPost.html
@@ -44,14 +44,14 @@
                 Новая вакансия.
             </div>
             <div class="card-body">
-                <form>
+                <form th:action="@{/createPost}" method="POST">
+                    <input type="hidden" name="id" value="0"/>
+                    <input type="hidden" name="created" value="05.12.2022"/>
                     <div class="form-group">
-                        <label>Имя
-                            <input type="text" class="form-control">
-                        </label>
-                        <label>Описание
-                            <input type="text" class="form-control">
-                        </label>
+                        <label for="name">Имя</label>
+                            <input type="text" class="form-control" name="name" id="name">
+                        <label for="description">Описание</label>
+                            <input type="text" class="form-control" name="description" id="description">
                     </div>
                     <button type="submit" class="btn btn-primary">Сохранить</button>
                 </form>
