--- a/src/main/resources/templates/candidates.html
+++ b/src/main/resources/templates/candidates.html
@@ -45,6 +45,7 @@
             <tr>
                 <th scope="col">#</th>
                 <th scope="col">Имя</th>
+                <th scope="col">Город</th>
                 <th scope="col">Описание</th>
                 <th scope="col">Дата создания</th>
             </tr>
@@ -58,6 +59,7 @@
                     </a>
                     <span th:text="${candidate.name}"></span>
                 </td>
+                <td th:text="${candidate?.city?.name}"/>
                 <td th:text="${candidate.description}"/>
                 <td th:text="${candidate.created}"/>
             </tr>
