--- a/src/main/resources/templates/posts.html
+++ b/src/main/resources/templates/posts.html
@@ -45,6 +45,7 @@
             <tr>
                 <th scope="col">#</th>
                 <th scope="col">Имя</th>
+                <th scope="col">Город</th>
                 <th scope="col">Описание</th>
                 <th scope="col">Дата создания</th>
             </tr>
@@ -64,6 +65,7 @@
             <i class="fa fa-square-o"></i>
         </span>
                 </td>
+                <td th:text="${post?.city?.name}"/>
                 <td th:text="${post.description}"/>
                 <td th:text="${post.created}"/>
             </tr>
