--- a/src/main/resources/templates/updateCandidate.html
+++ b/src/main/resources/templates/updateCandidate.html
@@ -47,6 +47,7 @@
                 <form th:action="@{/updateCandidate}" method="POST" th:object="${candidate}">
                     <input type="hidden" name="id" th:field="*{id}"/>
                     <input type="hidden" name="created" th:field="*{created}"/>
+                    <input type="hidden" name="created" th:field="*{photo}"/>
                     <div class="form-group">
                         <label for="name">Имя</label>
                         <input type="text" class="form-control" name="name" id="name" th:field="*{name}">
@@ -60,6 +61,8 @@
                             <option th:each="city : ${cities}" th:value="${city.id}" th:text="${city.name}"></option>
                         </select>
                     </div>
+                    <label for="name">Фотография</label>
+                    <input type="file" class="form-control" name="file" id="file">
                     <button type="submit" class="btn btn-primary">Сохранить</button>
                 </form>
             </div>
