4. Формы. Загрузка файла на сервер. [#504855 #369458]

--- a/src/main/resources/templates/updateCandidate.html
+++ b/src/main/resources/templates/updateCandidate.html
@@ -44,7 +44,7 @@
                 Редактирование кандидата.
             </div>
             <div class="card-body">
-                <form th:action="@{/updateCandidate}" method="POST" th:object="${candidate}">
+                <form th:action="@{/updateCandidate}" method="POST" th:object="${candidate}" enctype="multipart/form-data">
                     <input type="hidden" name="id" th:field="*{id}"/>
                     <input type="hidden" name="created" th:field="*{created}"/>
                     <input type="hidden" name="created" th:field="*{photo}"/>
