4. Многопоточность в базе данных [#504860]

--- a/src/main/resources/templates/failedRegistration.html
+++ b/src/main/resources/templates/failedRegistration.html
@@ -39,6 +39,9 @@
             </div>
         </div>
     </nav>
+    <div>
+        ОШИБКА РЕГИСТРАЦИИ, ПОЛЬЗОВАТЕЛЬ С ТАКИМ EMAIL УЖЕ СУЩЕСТВУЕТ!
+    </div>
 </div>
 </body>
 </html>
