--- a/src/main/resources/templates/registrationSuccess.html
+++ b/src/main/resources/templates/registrationSuccess.html
@@ -39,6 +39,9 @@
             </div>
         </div>
     </nav>
+    <div>
+        РЕГИСТРАЦИЯ ВЫПОЛНЕНА УСПЕШНО!
+    </div>
 </div>
 </body>
 </html>
